Added text overlay on the prides

--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -53,9 +53,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
