--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -52,9 +52,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：she/com</p>
           <!-- アストラムジェンダー（Astrumgender） -->
-          <a href="https://www.tumblr.com/angelknivesmogai/621553347233710080/astrumgender" title="アストラムジェンダー" target="_blank">
-            <img class="pride-flag" src="../img/pride/xeno/Astrumgender.png" alt="アストラムジェンダー" title="アストラムジェンダー（Astrumgender）">
-          </a>
+          <div class="container">
+            <a href="https://www.tumblr.com/angelknivesmogai/621553347233710080/astrumgender" title="アストラムジェンダー" target="_blank">
+              <img class="pride-flag image" src="../img/pride/xeno/Astrumgender.png" alt="アストラムジェンダー" title="アストラムジェンダー（Astrumgender）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                アストラムジェンダー
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -108,9 +115,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -153,9 +167,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -193,9 +214,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -231,9 +259,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -269,9 +304,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -307,9 +349,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -407,9 +456,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -444,9 +500,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -482,9 +545,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
@@ -518,9 +588,16 @@
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
           <!-- Pride template / Pride flag placeholder :3 -->
-          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-          </a>
+          <div class="container">
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+            </a>
+            <div class="middle">
+              <div class="text">
+                プライド
+              </div>
+            </div>
+          </div>
           <br>
         </div>
         <div class="art-chara">
