--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -53,9 +53,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -92,9 +99,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -133,9 +147,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -170,9 +191,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -207,9 +235,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -244,9 +279,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -281,9 +323,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -318,9 +367,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -355,9 +411,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -392,9 +455,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -429,9 +499,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -466,9 +543,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -506,9 +590,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -543,9 +634,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -580,9 +678,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -617,9 +722,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -654,9 +766,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -691,9 +810,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -728,9 +854,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -765,9 +898,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -802,9 +942,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -839,9 +986,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
