--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -55,9 +55,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -95,9 +102,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -135,9 +149,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
@@ -175,9 +196,16 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
             <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  プライド
+                </div>
+              </div>
+            </div>
             <br>
           </div>
           <div class="art-chara">
