Added Ala's sexuality, gender, and pronouns

--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -49,19 +49,54 @@
           <h4 id="Ala">アラ</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
+            <p class="pronouns">代名詞：she/they</p>
+            <!-- インターセックス（Intersex） -->
             <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
               </a>
               <div class="middle">
                 <div class="text">
-                  プライド
+                  インターセックス
                 </div>
               </div>
             </div>
             <br>
+            <!-- ノンバイナリー・ガール（Non-binary girl） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" title="ノンバイナリー・ガール" target="_blank">
+                <img class="pride-flag image" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール" title="ノンバイナリー・ガール（Non-binary girl）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  ノンバイナリー・ガール
+                </div>
+              </div>
+            </div>
+            <br>
+            <!-- レズビアン（Lesbian） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Lesbian" title="レズビアン" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Lesbian.png" alt="レズビアン" title="レズビアン（Lesbian）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  レズビアン
+                </div>
+              </div>
+            </div>
+            <br>
+            <!-- ブッチ（Butch） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Butch" title="ブッチ" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Butch.png" alt="ブッチ" title="ブッチ（Butch）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  ブッチ
+                </div>
+              </div>
+            </div>
           </div>
           <div class="art-chara">
             <img class="art" src="../img/fill.png" alt="アラ">
@@ -77,10 +112,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：インターセックス<br>
+            性自認：ノンバイナリー・ガール<br>
+            代名詞：彼女／奴（she/they）<br>
+            雌雄性：ブッチ・レズビアン
           </p>
           <p>
             誕生日：<br>
